# strace

./: CMakeLists.txt  main.c  test  test.c  test.out
inc/: strace.h
resources/: main_example.c  test.c  test.out
src/: CMakeLists.txt  main.c  syscall_names.c  utils.c
